typo changes + date

--- a/_posts/media/2016-01-10-pickups.md
+++ b/_posts/media/2016-01-10-pickups.md
@@ -12,7 +12,7 @@ image:
   creditlink: 
 ---
 
-<a href="http://www.cycfi.com/2015/07/the-continuing-journey/"><b>Cycyfy </b></a>
+<a href="http://www.cycfi.com/2015/07/the-continuing-journey/"><b>Cycfi</b></a>
 
 may be the most advanced maker of magnetic pickups with build-in preamps
 
