--- a/_posts/media/2016-01-10-pickups.md
+++ b/_posts/media/2016-01-10-pickups.md
@@ -6,8 +6,8 @@ excerpt:
 ads: true
 share: false
 image:
-  feature: branch-1600x800.jpg
-  teaser: branch-400x250.jpg
+  feature: sipo_flames.jpg
+  teaser: sipo_flames.jpg
   credit: 
   creditlink: 
 ---
