--- a/_posts/media/2016-01-10-pickups.md
+++ b/_posts/media/2016-01-10-pickups.md
@@ -7,7 +7,7 @@ ads: true
 share: false
 image:
   feature: sipo_flames.jpg
-  teaser: sipo_flames.jpg
+  teaser: sipo-flames-thumb.jpg
   credit: 
   creditlink: 
 ---
